templates/template-openldap-configurations.yaml
---
# Source: openldap/templates/openldap.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: openldap
  name: openldap
  namespace: openldap
spec:
  ports:
    - port: 389
      targetPort: 389
  selector:
    app: openldap
---
# Source: openldap/templates/phpldapadmin.yaml
apiVersion: v1
kind: Service
metadata:
  name: openldap-admin
  namespace: openldap
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: openldap-admin
---
# Source: openldap/templates/openldap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openldap
  namespace: openldap
  labels:
    app: openldap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openldap
  template:
    metadata:
      labels:
        app: openldap
    spec:
      containers:
        - name: openldap
          image: osixia/openldap:latest
          args: ["--loglevel", "debug"]
          volumeMounts:
            - name: config-storage
              mountPath: /container/service/slapd/assets/config/bootstrap/ldif/custom
            - name: ldap-certs
              mountPath: /container/service/slapd/assets/certs
            - mountPath: /var/lib/ldap
              name: ldap-store
            - mountPath: /etc/ldap/slapd.d
              name: ldap-slapd
          ports:
            - containerPort: 389
            - containerPort: 636
      volumes:
        - name: config-storage
          emptyDir: {}
        - name: ldap-certs
          emptyDir: {}
        - name: openldap-seedusers
          configMap:
            name: openldap-seedusers
        - persistentVolumeClaim:
            claimName: openldap-pvc
          name: ldap-store
        - persistentVolumeClaim:
            claimName: openldap-slapd-pvc
          name: ldap-slapd
---
# Source: openldap/templates/phpldapadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openldap-admin
  namespace: openldap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openldap-admin
  template:
    metadata:
      labels:
        app: openldap-admin
    spec:
      containers:
      - name: openldap-admin
        image: docker.io/osixia/phpldapadmin:latest
        ports:
          - containerPort: 80
---
# Source: openldap/templates/openldap.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: openldap
  namespace: openldap
  labels:
    app: openldap
spec:
  to:
    kind: Service
    name: openldap
    weight: 100
  wildcardPolicy: None
---
# Source: openldap/templates/phpldapadmin.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: openldap-admin
  namespace: openldap
spec:
  to:
    kind: Service
    name: openldap-admin
    weight: 100
  wildcardPolicy: None
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: admin
  namespace: openldap
spec:
  to:
    kind: Service
    name: openldap-admin
    weight: 100
  port:
    targetPort: 80
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
